# arana

./: .gitignore  .typos.toml  Makefile  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: python-release.yml  python-tests.yml
arana/: browser.py  console.py  element.py  frame.py  page.py
docs/: arana.puml
src/arana/: browser.py  config.py  console.py  content.py  element.py  frame.py  html.py  page.py  response.py  rndm.py
tests/: test_browser.py  test_config.py  test_console.py  test_content.py  test_page.py  test_rndm.py
tests/contents/: large.html
