[project]
name = "arana"
version = "0.0.9"
description = "Abstraction layer for web scrapers"
authors = [{ name = "Fabrício Barros Cabral", email = "fabriciofx@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
keywords = [
    "web",
    "scraper",
    "playwright",
    "scrapy",
    "scraping",
    "browserforge",
]
dependencies = ["browserforge>=1.2.3", "playwright>=1.56.0"]

[project.urls]
homepage = "https://github.com/fabriciofx/arana"
bug-tracker = "https://github.com/fabriciofx/arana/issues"

[dependency-groups]
dev = [
    "fake-https-server>=0.0.8",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
addopts = "-n auto"
